feat & docs: feat endpoint get package by id and get order by id & docs sequence diagram (in progress) and adjust open api documentation
